# sqlite_protobuf

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
.circleci/: Dockerfile  config.yml
.github/workflows/: ci.yml
example/: AddressBook.proto  CMakeLists.txt  Pipfile  create_database.py  query_database.py
scripts/: dockerize.sh
src/: CMakeLists.txt  extension_main.cpp  header.h  protobuf_enum.cpp  protobuf_enum_values.cpp  protobuf_extract.cpp  protobuf_load.cpp  sqlite_protobuf.cpp  utilities.cpp  utilities.h
tests/: CMakeLists.txt  Pipfile  README.md  list_tests.py
tests/unit/: test_protobuf_enum.py  test_protobuf_extract.py  test_protobuf_load.py  utils.py
